# Snake_Game

./: CMakeLists.txt  README.md
src/: RenderingImage.cpp  RenderingImage.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  score.cpp  score.h  snake.cpp  snake.h
testing_Sdl/: CMakeLists.txt
testing_Sdl/src/: OpenningWindow.cpp
